# Cotton-Harvesting-system

./: LICENSE
cpu/: package.xml  setup.py
cpu/config/: config.py
cpu/msg/: MaskInfoArray.msg
cpu/src/computation/: box_check.py  centroid.py  cpu.py  diagnostic.py  fixedframes.py  get_maks.py  haversting.py  kinovamovement.py  manipulation_stateMachine.py  orientationDetector_node_PCA_2D.py  perception_stateMachine.py  real_test2.csv  scenario_1.csv  semantic_pointcloud.py  test_subscriber.py
cpu/src/computation/demeter++/: postprocessing.py
cpu/src/computation/states/: cam_adjust.py  finalApproach.py  home.py  localization.py  manipulationInit.py  perception.py  scan_scene.py  segmentation.py  wait.py
cpu/src/computation/utils/: robotics.py  ros_communication.py  utils_cv.py  utils_sm.py  utils_tf.py
cpu/src/kinova_global/ros_kortex/kortex_examples/: CMakeLists.txt
cpu/src/octomap_cotton/: CMakeLists.txt  package.xml
cpu/src/octomap_cotton/launch/: octomap_generator.launch
cpu/src/octomap_cotton/src/: filter_point_cloud.cpp
cpu/srv/: MultiStateTrigger.srv  TFpublisher.srv  getDetectedInfo.srv  retrieveSensorInfo.srv
docker/: Dockerfile  build_docker.sh  config.cfg  run_docker.sh
octomap_cotton/: CMakeLists.txt
octomap_cotton/launch/: octomap_generator.launch
octomap_cotton/src/: filter_point_cloud.cpp  octomap_example_node.cpp  octomap_from_pointcloud.cpp
ros_kortex/kortex_examples/src/move_it/: orb_slam3_test.py  simulations_tfm.py
